[23_05_2024 - Coding] chia lại layout dashboard, các mh HĐ tạo, HĐ nhận

--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
@@ -31,7 +31,7 @@
 
     <div class="select-option">
       <button
-        class="dx-button-form dx-button-close dx-button-90"
+        class="dx-button-form dx-button-close dx-button-90 cancel-button"
         (click)="dialogRef.close()"
         type="button">{{'exit' | translate}}
       </button>
