--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.scss
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.scss
@@ -49,7 +49,7 @@
       cursor: pointer;
     }
     button:nth-last-child(1) {
-      background-color: #106DB6;
+      background-color: #0041C4;
     }
   }
 }
