--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid">
-  <div class="row">
+<div class="container-fluid222222" style="margin-left: 14px;">
+  <!-- <div class="row"> -->
     <!-- <div class="col-md-12">
       <h3>{{'dashboard.contract.received' | translate}}</h3>
     </div> -->
-    <div class="row">
+  <div class="row">
     <div class="col-md-6" style="padding: 0 !important;">
       <div class="add-contract-theme">
         <div style="max-width: 450px;">
@@ -35,7 +35,7 @@
     </div>
     
     
-    <div class="col-md-6">
+    <div class="col-xxl-6 col-md-6" style="padding-left: 24px;">
       
       <div class="contract-processing">
         <div class="row_text_1">
@@ -43,42 +43,39 @@
           <span style="color: #0041C4; cursor: pointer;"><b (click)="openLink('/main/contract/create/draft')">Xem tất cả</b></span>
         </div>
         <br>
-        <div class="row_text_2" *ngFor="let item of contractConnectList; let i = index">
+        <div class="row_text" *ngFor="let item of contractConnectList; let i = index">
           <div>
             <img src="../../assets/img/frame_contract.svg">
           </div>
-          <!-- chưa xử lý logic mới chỉ để tạm giao diện -->
           <div class="body_row_1"  id="noti" > 
-            <div   style="padding: 4px;">
+            <div style="padding: 4px;">
               <a (click)="detailContract(item.id)" style="text-decoration: none;">
-              <div class="row">
-                <div *ngIf="this.lang == 'vi'" class="col-md-10 item_contract_name1">{{item.name}}</div>
-              </div>
-              <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
-                <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}
+                <div class="row">
+                  <div *ngIf="this.lang == 'vi'" class="col-md-10 item_contract_name1">{{item.name}}</div>
                 </div>
-              </div>
-              <div>   
-              </div>
+                <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+                  <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}
+                  </div>
+                </div>
               </a>
             </div>
           </div>
           <div>
-          <div class="icon_draft">
-            <img src="../../../assets//img/edit-2.svg" style="width: 16px;" (click)="openEdit(item.id)">
+            <div class="icon_draft">
+              <img src="../../../assets//img/edit-2.svg" style="width: 16px;" (click)="openEdit(item.id)">
+            </div>
+            <div class="icon_draft">
+              <img src="../../../assets//img/trash.svg" style="width: 16px;" (click)="deleteContract(item.id)">
+            </div>
           </div>
-          <div class="icon_draft">
-            <img src="../../../assets//img/trash.svg" style="width: 16px;" (click)="deleteContract(item.id)">
-          </div>
+          <br>
         </div>
-        <br>
       </div>
     </div>
   </div>
-</div>
   
-  <div class="row" style="padding-top: 12px;">
-    <div class="col-md-6" style="background-color: #FFFFFF; border-radius: 12px; padding: 15px">
+  <div class="row" style="padding-top: 24px;">
+    <div class="col-xxl- 6 col-md-6" style="background-color: #FFFFFF; border-radius: 12px; padding: 15px;">
       <span style="font-size: 14px; font-weight: 700;">{{'menu.contract.receive.list' | translate}}</span>
       <div class="container overflow-hidden">
         <div class="row gy">
@@ -139,7 +136,7 @@
       </div>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-xxl-6 col-md-6" style="padding-left: 24px;">
       <div class="contract-request">
         <div class="row_text_1">
           <span style="color: #001A4D; font-weight: 600; font-size: 14px;">{{'request.process' | translate}}</span>
@@ -150,7 +147,6 @@
           <div>
             <img src="../../assets/img/frame_contract.svg">
           </div>
-          <!-- chưa xử lý logic mới chỉ để tạm giao diện -->
           <div class="body_row_1"  id="noti" > 
             <div >
               <a (click)="detailContract(item.participant.contract.id)" style="text-decoration: none;">
@@ -182,9 +178,9 @@
 
   </div>
 
-  <div class="row" style="padding-top: 12px;">
+  <div class="row" style="padding-top: 24px;">
 
-    <div class="col-md-6" style="background-color: #FFFFFF; border-radius: 12px; padding: 15px">
+    <div class="col-xxl-6 col-md-6" style="background-color: #FFFFFF; border-radius: 12px; padding: 15px;">
       <div class="row">
         <div class="col-md-6">
           <span style="font-size: 14px; font-weight: 700;">{{'dashboard.contract.created' | translate}}</span>
@@ -194,7 +190,7 @@
         </div>
       </div>
       <div class="body-chart" id="chart-column">
-        <div class="row" style="margin: 0 1%;">
+        <div class="row" >
           <div class="col-md-6" style="text-align: center;">
             <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="search()">
               <ng-template  #options let-item>
@@ -236,7 +232,7 @@
       </div>
     </div>
     
-    <div class="col-md-6" >
+    <div class="col-xxl-6 col-md-6" style="padding-left: 24px;">
       <div class="package" style="background-color: #FFFFFF; border-radius: 12px; padding: 15px; height: 100%;">
         <div class="row">
           <div class="col-md-12">
@@ -264,5 +260,4 @@
       </div>
     </div>
   </div>
-  
 </div>
