--- a/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.scss
@@ -36,7 +36,7 @@
       margin: 5px;
     }
     button:nth-last-child(1) {
-      background-color: #106DB6;
+      background-color: #0041C4;
       margin: 5px;
     }
   }
