--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.scss
@@ -27,14 +27,24 @@
     button {
       width: 91px;
       height: 31px;
-      border-radius: 5px;
+      border-radius: 6px;
       border: none;
       color: white;
       background-color: #8B8B8B;
       cursor: pointer;
     }
     button:nth-last-child(1) {
-      background-color: #106DB6;
+      background-color: #0041C4;
     }
   }
 }
+
+// .cancel-button{
+//   width: 91px;
+//   height: 31px;
+//   border-radius: 6px;
+//   border: 1px solid var(--Neutral-05, #C6D2EA);
+//   background: var(--White, #FFF);
+//   color: #677694;
+//   cursor: pointer;
+// }
