--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -45,7 +45,7 @@
   width: 110px;
   height: 35px;
   display: inline-block;
-  border-radius: 4px;
+  border-radius: 6px;
   font-weight: 700;
 }
 
@@ -143,14 +143,14 @@
   border: 1px solid #0041C4;
   margin: 0 5px;
   padding: 2px;
-  border-radius: 4px;
+  border-radius: 6px;
 }
 .label_item{
   padding: 10px 0px 5px;
   color: #5e5e5e;
 }
 .search{
-  border: 1px solid #106DB6;
+  // border: 1px solid #106DB6;
   border-radius: 8px;
   height: 38px;
 }
@@ -160,7 +160,7 @@
   position: relative;
 }
 .input-img {
-  padding: 10px;
+  padding: 5px;
   cursor: pointer;
 }
 .input-img-calendar {
@@ -169,13 +169,16 @@
   position: absolute;
 }
 .input-text {
-  border: 0;
-  margin: 2px;
+  border: 0.5px solid #F1F5FE;
+  margin: 0px;
   width: 100%;
+  height: 38px;
   outline:0px;
   background-color: #F1F5FE;
   padding: 10px 16px 10px 16px;
   opacity: 0px;
+  border-radius: 8px; 
+  font-weight: 400;
 }
 
 :host ::ng-deep {
@@ -276,10 +279,10 @@
 .btn-block {
   background-color: #106DB6;
   color: white;
-  height: 40px;
+  height: 39px;
   font-size: 14px;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 6px;
 }
 .div_icon{
   padding: 0 10px;
@@ -305,36 +308,60 @@
 
 .btn_submit{
   border: 0px;
-  border-radius: 4px;
+  border-radius: 6px;
   height: 33px;
   box-sizing: border-box;
   background: #0041C4;
   color: #FFFFFF;
   border: 1px solid #0041C4;
   font-size: 13px;
-  margin: 0 10px;
+  margin: 0 24px;
 }
 
 .btn_consider{
   border: 1px solid #0041C4;
-  border-radius: 8px;
+  border-radius: 6px;
   box-sizing: border-box;
   color: #0041C4;
   background-color: #FFFFFF;
   font-size: 13px;
-  margin: 0 10px;
+  // margin: 0 10px;
+  font-weight: 700;
+  height: 40px;
+}
+
+.btn_consider_cancel{
+  border: 1px solid #0041C4;
+  border-radius: 6px;
+  box-sizing: border-box;
+  color: #0041C4;
+  background-color: #FFFFFF;
+  font-size: 13px;
+  margin: 0 24px;
   font-weight: 700;
   height: 40px;
 }
 
 .btn_sign{
   border: 0px;
-  border-radius: 8px;
+  border-radius: 6px;
   box-sizing: border-box;
   color: #FFFFFF;
   background-color: #0041C4;
   font-size: 13px;
-  margin: 0 10px;
+  // margin: 0 10px;
+  font-weight: 700;
+  height: 40px;
+}
+
+.btn_cancel{
+  border: 0px;
+  border-radius: 6px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  background-color: #0041C4;
+  font-size: 13px;
+  margin: 0 24px;
   font-weight: 700;
   height: 40px;
 }
@@ -354,7 +381,7 @@
 
 .btn-multi{
   border: 0px;
-  border-radius: 8px;
+  border-radius: 6px;
   box-sizing: border-box;
   color: #FFFFFF;
   background-color: #0041C4;
@@ -371,4 +398,21 @@
 
 .three_dot_text{
   margin: 10px;
+}
+
+@media (min-width: 1400px) {
+  .col-xxl-10 {
+      flex: 0 0 auto;
+      width: 90%;
+  }
+  
+  .col-xxl-8 {
+    flex: 0 0 auto;
+    width: 70%;
+}
+  
+  .col-xxl-2 {
+    flex: 0 0 auto;
+    width: 10%;
+  }
 }
