--- a/src/app/main/contract/dialog/filter-list-dialog/filter-list-dialog.component.scss
+++ b/src/app/main/contract/dialog/filter-list-dialog/filter-list-dialog.component.scss
@@ -17,24 +17,23 @@
     }
 }  
 .cancel-button{
-    border: 0px;
-    border-radius: 5px;
-    height: 33px;
-    width: 100px;
-    box-sizing: border-box;
-    color: white;
-    background-color: #8B8B8B;
-    font-size: 13px;
-    margin: 0 10px;
+  width: 100px;
+  background: #FFFFFF;
+  font-weight: bold;
+  color: #0041C4;
+  border: 1px solid var(--Primary, #0041C4);
+  border-radius: 6px;
+  cursor: pointer;
+  margin: 0 10px;
 }
 .save-button{
     border: 0px;
-    border-radius: 5px;
+    border-radius: 6px;
     height: 33px;
     width: 100px;
     box-sizing: border-box;
     color: white;
-    background-color: #106DB6;
+    background-color: #0041C4;
     font-size: 13px;
     margin: 0 10px;
 }
