--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -11,13 +11,13 @@
 
       <div class="search-wrapper">
         <div style="padding-right: 8px;">
-          <h3 class="search-wrapper-label" style="color: #002060;">{{title | translate}}</h3>
+          <h3 class="search-wrapper-label" style="color: #002060; font-size: 14px;">{{title | translate}}</h3>
         </div>
         <div *ngIf="checkSubTitle()" style="display: flex; align-items: center; gap: 8px;">
           <img src="../../assets/img/caret-down.svg" class="img_icon_caret-down" />
         </div>
         <div style="padding-left: 8px;">
-          <h3 class="search-wrapper-label" style="color: #0041C4;">{{subTitle | translate}}</h3>
+          <h3 class="search-wrapper-label" style="color: #0041C4;font-size: 14px;">{{subTitle | translate}}</h3>
         </div>
       </div>
       <div *ngIf="getShowHideSideBar()"  style="display: flex;align-items: center;">
