--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -65,7 +65,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #e6e7ec;
+  // border-bottom: 1px solid #e6e7ec;
   transition: left 500ms;
 }
 .search-wrapper {
